@@ -1,4 +1,4 @@
-<!ENTITY day          "25">
+<!ENTITY day          "27">
 <!ENTITY month        "10">
 <!ENTITY year         "2004">
 <!ENTITY version      "svn-&year;&month;&day;">
@@ -19,7 +19,7 @@
 <!ENTITY publisher      "Unknown">
 
 
-<!ENTITY blfs-bootscripts-version     "20041023"> 
+<!ENTITY blfs-bootscripts-version     "20041027"> 
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
                                      
 <!-- Part II -->                     
@@ -36,6 +36,7 @@
 <!ENTITY heimdal-version              "0.6.2">   
 <!ENTITY mitkrb-version               "1.3.5"> 
 <!ENTITY cyrus-sasl-version           "2.1.20"> 
+<!ENTITY stunnel-version              "4.05"> 
                                   
 <!-- Chapter 5 -->                
 <!ENTITY reiser-version               "3.6.19"> 
