@@ -22,6 +22,9 @@ who wrote what.</para>
 
 <itemizedlist>
 
+<listitem><para>October 27th, 2004 [randy]: Added new package 
+Stunnel-4.05.</para></listitem>
+
 <listitem><para>October 25th, 2004 [igor]: Added aspell, pkgconfig, HTML
 Tidy, Net-SNMP, SQLite, Cyrus SASL and Dmalloc dependencies and a
 configure switch utilizing readline to PHP instructions, thanks to
