@@ -18,7 +18,9 @@ application designed to handle the login function.  In this chapter, we show
 how to enhance <command>login</command> by setting policies with
 <application><acronym>PAM</acronym></application> modules.  Access via networks
 can also be secured by policies set by <application>iptables</application>, 
-commonly referred to as a firewall.</para>
+commonly referred to as a firewall. For applications that don't offer the
+best security, you can use the <application>Stunnel</application> package to
+wrap an application daemon inside an <acronym>SSL</acronym> tunnel.</para>
 
 <para>Prevention of breaches, like a trojan, are assisted by applications like 
 <application>GnuPG</application>, specifically the ability to confirm signed 
@@ -39,5 +41,6 @@ of critical files (defined by the administrator) and then regenerates those
 <xi:include xmlns:xi="http://www.w3.org/2003/XInclude" href="heimdal.xml"/>
 <xi:include xmlns:xi="http://www.w3.org/2003/XInclude" href="mitkrb.xml"/>
 <xi:include xmlns:xi="http://www.w3.org/2003/XInclude" href="cyrus-sasl.xml"/>
+<xi:include xmlns:xi="http://www.w3.org/2003/XInclude" href="stunnel.xml"/>
 
 </chapter>
