@@ -358,6 +358,16 @@ install-sshd: create-dirs
 	ln -sf  ../init.d/sshd ${EXTDIR}/rc.d/rc5.d/S30sshd
 	ln -sf  ../init.d/sshd ${EXTDIR}/rc.d/rc6.d/K30sshd
 
+install-stunnel: create-dirs
+        install -m ${MODE} blfs/init.d/stunnel    ${EXTDIR}/rc.d/init.d/
+        ln -sf  ../init.d/stunnel ${EXTDIR}/rc.d/rc0.d/K47stunnel
+        ln -sf  ../init.d/stunnel ${EXTDIR}/rc.d/rc1.d/K47stunnel
+        ln -sf  ../init.d/stunnel ${EXTDIR}/rc.d/rc2.d/S26stunnel
+        ln -sf  ../init.d/stunnel ${EXTDIR}/rc.d/rc3.d/S26stunnel
+        ln -sf  ../init.d/stunnel ${EXTDIR}/rc.d/rc4.d/S26stunnel
+        ln -sf  ../init.d/stunnel ${EXTDIR}/rc.d/rc5.d/S26stunnel
+        ln -sf  ../init.d/stunnel ${EXTDIR}/rc.d/rc6.d/K47stunnel
+
 install-svn: create-dirs
 	install -m ${MODE} blfs/init.d/svn        ${EXTDIR}/rc.d/init.d/
 	ln -sf ../init.d/svn ${EXTDIR}/rc.d/rc0.d/K27svn
@@ -442,6 +452,7 @@ install-xinetd: create-dirs
 	install-samba \
 	install-sendmail \
 	install-sshd \
+	install-stunnel \
 	install-svn \
 	install-sysstat \
 	install-vsftpd \
