@@ -1,0 +1,40 @@
+#!/bin/sh
+# Begin $rc_base/init.d/stunnel
+
+# Based on sysklogd script from LFS-3.1 and earlier.
+# Rewritten by Gerard Beekmans  - gerard@linuxfromscratch.org
+
+#$LastChangedBy$
+#$Date$
+
+. /etc/sysconfig/rc
+. $rc_functions
+
+case "$1" in
+        start)
+                echo "Starting the Stunnel Daemon..."
+                loadproc /usr/sbin/stunnel
+                ;;
+
+        stop)
+                echo "Stopping the Stunnel Daemon..."
+                killproc /usr/sbin/stunnel
+                ;;
+
+        restart)
+                $0 stop
+                sleep 1
+                $0 start
+                ;;
+
+        status)
+                statusproc /usr/sbin/stunnel
+                ;;
+
+        *)
+                echo "Usage: $0 {start|stop|restart|status}"
+                exit 1
+                ;;
+esac
+
+# End $rc_base/init.d/stunnel
